kernel/build_error.txt
warning: unnecessary parentheses around assigned value
   --> drivers\vios-driver-gpu\src\lib.rs:147:19
    |
147 |         let idx = (q.avail.idx as usize % 16); 
    |                   ^                         ^
    |
    = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
    |
147 -         let idx = (q.avail.idx as usize % 16); 
147 +         let idx = q.avail.idx as usize % 16; 
    |

warning: `vios-driver-gpu` (lib) generated 1 warning (run `cargo fix --lib -p vios-driver-gpu` to apply 1 suggestion)
warning: unused import: `ostd::prelude::*`
 --> apps\vios-hello\src\lib.rs:4:5
  |
4 | use ostd::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `vios-hello` (lib) generated 1 warning (run `cargo fix --lib -p vios-hello` to apply 1 suggestion)
   Compiling kernel v0.1.0 (C:\Users\Admin\Download\ViOS\kernel)
error[E0412]: cannot find type `Box` in this scope
 --> kernel\src\process\scheduler.rs:7:32
  |
7 |     pub tasks: BTreeMap<usize, Box<Task>>,
  |                                ^^^ not found in this scope
  |
help: consider importing one of these structs
  |
1 + use alloc::boxed::Box;
  |
1 + use ostd::prelude::Box;
  |

error[E0433]: failed to resolve: use of undeclared type `Box`
  --> kernel\src\process\scheduler.rs:30:24
   |
30 |         let mut task = Box::new(Task::new(self.next_task_id, name, allowed_drivers));
   |                        ^^^ use of undeclared type `Box`
   |
help: consider importing one of these structs
   |
 1 + use alloc::boxed::Box;
   |
 1 + use ostd::prelude::Box;
   |

error[E0412]: cannot find type `Box` in this scope
   --> kernel\src\process\scheduler.rs:103:77
    |
103 |                 let tasks_map_ptr = &mut self.tasks as *mut BTreeMap<usize, Box<Task>>;
    |                                                                             ^^^ not found in this scope
    |
help: consider importing one of these structs
    |
  1 + use alloc::boxed::Box;
    |
  1 + use ostd::prelude::Box;
    |

warning: unused imports: `debug` and `info`
 --> kernel\src\arch\trap.rs:7:11
  |
7 | use log::{debug, warn, info};
  |           ^^^^^        ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `info`
 --> kernel\src\process\syscall.rs:6:11
  |
6 | use log::{info, warn};
  |           ^^^^

warning: unused import: `Some`
 --> kernel\src\process\task.rs:4:34
  |
4 | use core::option::Option::{self, Some, None};
  |                                  ^^^^

warning: unused import: `debug`
 --> kernel\src\process\scheduler.rs:2:17
  |
2 | use log::{info, debug, warn};
  |                 ^^^^^

error[E0614]: type `usize` cannot be dereferenced
  --> kernel\src\process\scheduler.rs:68:27
   |
68 |                 if now >= *until {
   |                           ^^^^^^ can't be dereferenced

error[E0277]: the size for values of type `str` cannot be known at compilation time
   --> kernel\src\process\mod.rs:150:17
    |
150 |     if let Some(p) = path {
    |                 ^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `str`
    = note: all local variables must have a statically known size

error[E0277]: the size for values of type `str` cannot be known at compilation time
   --> kernel\src\process\mod.rs:150:12
    |
150 |     if let Some(p) = path {
    |            ^^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `Some`
   --> C:\Users\Admin\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library/core/src/option.rs:594:17
    |
594 | pub enum Option<T> {
    |                 ^ required by this bound in `Some`
...
602 |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ---- required by a bound in this tuple variant

error[E0277]: the size for values of type `str` cannot be known at compilation time
   --> kernel\src\process\mod.rs:148:14
    |
148 |     } else { None };
    |              ^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `None`
   --> C:\Users\Admin\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library/core/src/option.rs:594:17
    |
594 | pub enum Option<T> {
    |                 ^ required by this bound in `None`
...
598 |     None,
    |     ---- required by a bound in this unit variant

error[E0277]: the size for values of type `str` cannot be known at compilation time
    --> kernel\src\process\mod.rs:147:67
     |
 147 |         sched.current_task_id.and_then(|id| sched.tasks.get(&id)).and_then(|t| t.open_files.get(&fd).cloned())
     |                                                                   ^^^^^^^^ doesn't have a size known at compile-time
     |
     = help: the trait `Sized` is not implemented for `str`
note: required by an implicit `Sized` bound in `Option::<T>::and_then`
    --> C:\Users\Admin\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library/core/src/option.rs:1535:27
     |
1535 |     pub const fn and_then<U, F>(self, f: F) -> Option<U>
     |                           ^ required by the implicit `Sized` requirement on this type parameter in `Option::<T>::and_then`

warning: unused variable: `server_id`
  --> kernel\src\process\ipc_test.rs:59:9
   |
59 |     let server_id = super::spawn("multi-server", Vec::new());
   |         ^^^^^^^^^
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
help: if this is intentional, prefix it with an underscore
   |
59 |     let _server_id = super::spawn("multi-server", Vec::new());
   |         +
help: you might have meant to pattern match on the similarly named constant `STACK_SIZE`
   |
59 -     let server_id = super::spawn("multi-server", Vec::new());
59 +     let process::scheduler::Scheduler::spawn::STACK_SIZE = super::spawn("multi-server", Vec::new());
   |

Some errors have detailed explanations: E0277, E0412, E0433, E0614.
For more information about an error, try `rustc --explain E0277`.
warning: `kernel` (lib) generated 5 warnings
error: could not compile `kernel` (lib) due to 8 previous errors; 5 warnings emitted
